# MatchPatch

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  Auto_Pegelsetup.rpp  HelixAnalyzeRange.lua  HelixAnalyzeSet.lua  HelixAnalyzeSingle.lua  HelixSnapshotLibrary.lua  IO_to_reamp.py  LICENSE  README.md  README_Auto_Pegelsetup.txt  TODO.md  decrypt_hls.py  encrypt_hls.py  hls_adjust.py  pyproject.toml  run_gain_adjustment.py
.github/: dependabot.yml
.github/workflows/: pages.yml  quality.yml  release.yml
Python/: adjust_gain.py  decrypt_hls.py  encrypt_hls.py  hls_adjust.py  list_cab_presets.py  preset_handling.py  remove_inactive_blocks.py  replace_amp.py  reset_output_levels.py  stereofy.py
Reaper/: Auto_Pegelsetup.rpp  HelixAnalyzeRange.lua  HelixAnalyzeSet.lua  HelixSnapshotLibrary.lua
docs/: conf.py  developer-notes.md  faq.md  glossary.md  index.md  musician-guide.md  quick-start.md  troubleshooting.md
docs/_static/: matchpatch-docs.css
docs/assets/screenshots/: README.md
docs/concepts/: backends.md  crest-factor.md  lufs-and-loudness.md  measurement-and-adjusted-files.md  reading-results.md  reference-di.md  routing-and-levels.md  snapshots-solos-and-ignored.md  timing.md
docs/dev/: architecture.md  commands.md  file-formats.md  release.md
docs/workflows/: custom-adjustments.md  hardware-measurement.md  manual-editing-and-csv.md  normalize-setlist.md  normalize-single-preset.md  optimize-timing.md  save-and-import.md  select-changed-presets.md  test-without-hardware.md
installer/: README.md  matchpatch.iss
installer/pyinstaller/: build_support.py  matchpatch-cli.spec  matchpatch-gui.spec
installer/smoke/: smoke_installed.ps1  smoke_payload.ps1
scripts/: build-docs.sh  build-windows-installer-from-wsl.sh  build-windows-installer.cmd  build-windows-payload.cmd  check_commit_msg.py  measure-windows-from-wsl.sh  release.py  run_hook_with_hint.py  stage-installer-docs.sh  sync-windows-from-wsl.sh  sync-windows.cmd  sync-wsl.sh  test-gui.sh  test-windows-installer-from-wsl.sh  test-windows-installer.cmd
src/matchpatch/: __init__.py  analysis.py  app.py  audio.py  cli.py  config.py  custom_adjustments.py  measure.py  measurement_optimizer.py  midi.py  normalize.py  progress.py  workflow.py
src/matchpatch/devices/: __init__.py  base.py  helix.py  registry.py
src/matchpatch/gui/: __init__.py  app.py  collapsible.py  device_panels.py  dialogs.py  help.py  main_window.py  snapshot_header.py  worker.py
tests/: README.md  test_analysis.py  test_app.py  test_audio.py  test_check_commit_msg.py  test_cli.py  test_config.py  test_devices.py  test_gui.py  test_gui_app.py  test_gui_dialogs.py  test_gui_help.py  test_helix.py  test_installer_metadata.py  test_measure.py  test_measurement_optimizer.py  test_normalize.py  test_preset_handling.py  test_progress.py
