[project]
name = "matchpatch"
version = "0.3.0"
description = "Audio processor preset gain normalization and measurement tools"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = []

[project.optional-dependencies]
gui = [
    "PySide6>=6.8",
]

[project.urls]
Homepage = "https://github.com/noseglasses/MatchPatch"
Issues = "https://github.com/noseglasses/MatchPatch/issues"
Repository = "https://github.com/noseglasses/MatchPatch.git"

[project.scripts]
matchpatch = "matchpatch.cli:main"
matchpatch-gui = "matchpatch.gui.app:main"

[dependency-groups]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=4",
    "sphinx>=8",
]
installer = [
    "pillow>=10.0",
    "pyinstaller>=6.0",
]
wsl = [
    "hypothesis>=6.155.2",
    "numpy>=2.0",
    "pre-commit>=4.0",
    "pyloudnorm>=0.1.1",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.15.17",
    "soundfile>=0.13.1",
    "ty>=0.0.1a21",
]
windows = [
    { include-group = "wsl" },
    "mido>=1.3.3",
    "python-rtmidi>=1.5.8; sys_platform == 'win32'",
    "sounddevice>=0.5.1; sys_platform == 'win32'",
]

[tool.uv]
default-groups = []

[tool.pytest.ini_options]
addopts = [
    "--cov=matchpatch",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["matchpatch"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["ANN", "E4", "E7", "E9", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"Python/**" = ["ANN"]
"tests/**" = ["ANN"]

[tool.ty.src]
include = ["src"]

[tool.ty.analysis]
allowed-unresolved-imports = [
    "mido",
    "PySide6",
    "PySide6.QtCore",
    "PySide6.QtGui",
    "PySide6.QtSvg",
    "PySide6.QtWidgets",
    "sounddevice",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
